Frontend for error tracking settings - project dropdown
Implements the Error Tracking Settings page in Vuejs
Adds functionality to request a list of projects for
a given api url and token. Allows the user to save
the page in any state after disabling error tracking

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -653,6 +653,9 @@ msgstr ""
 msgid "Advanced settings"
 msgstr ""
 
+msgid "After adding your Auth Token, use the 'Connect' button to load projects"
+msgstr ""
+
 msgid "Alert"
 msgid_plural "Alerts"
 msgstr[0] ""
@@ -1894,6 +1897,9 @@ msgstr ""
 msgid "Clear search input"
 msgstr ""
 
+msgid "Click 'Connect' to re-establish the connection to Sentry and activate the dropdown."
+msgstr ""
+
 msgid "Click any <strong>project name</strong> in the project list below to navigate to the project milestone."
 msgstr ""
 
@@ -2590,6 +2596,9 @@ msgid "Connect your external repositories, and CI/CD pipelines will run for new 
 msgstr ""
 
 msgid "Connecting..."
+msgstr ""
+
+msgid "Connection has failed. Re-check Auth Token and try again."
 msgstr ""
 
 msgid "Contact sales to upgrade"
@@ -3491,9 +3500,6 @@ msgstr ""
 msgid "Enter the merge request title"
 msgstr ""
 
-msgid "Enter your Sentry API URL"
-msgstr ""
-
 msgid "Environment variables"
 msgstr ""
 
@@ -3708,6 +3714,27 @@ msgid "Error while loading the merge request. Please try again."
 msgstr ""
 
 msgid "Error:"
+msgstr ""
+
+msgid "ErrorTracking|Active"
+msgstr ""
+
+msgid "ErrorTracking|Auth Token"
+msgstr ""
+
+msgid "ErrorTracking|Connect"
+msgstr ""
+
+msgid "ErrorTracking|No projects available"
+msgstr ""
+
+msgid "ErrorTracking|Project"
+msgstr ""
+
+msgid "ErrorTracking|Select project"
+msgstr ""
+
+msgid "ErrorTracking|Sentry API URL"
 msgstr ""
 
 msgid "Errors"
@@ -4067,9 +4094,6 @@ msgstr ""
 msgid "Filter..."
 msgstr ""
 
-msgid "Find and manage Auth Tokens in your Sentry account settings page."
-msgstr ""
-
 msgid "Find by path"
 msgstr ""
 
@@ -4083,6 +4107,9 @@ msgid "Find the downloaded ZIP file and decompress it."
 msgstr ""
 
 msgid "Find the newly extracted <code>Takeout/Google Code Project Hosting/GoogleCodeProjectHosting.json</code> file."
+msgstr ""
+
+msgid "Find your hostname in your Sentry account settings page"
 msgstr ""
 
 msgid "Fingerprints"
@@ -6354,6 +6381,9 @@ msgstr ""
 msgid "No prioritised labels with such name or description"
 msgstr ""
 
+msgid "No projects available"
+msgstr ""
+
 msgid "No public groups"
 msgstr ""
 
@@ -7280,6 +7310,9 @@ msgstr ""
 msgid "Project"
 msgstr ""
 
+msgid "Project \"%{name}\" is no longer available. Select another project to continue."
+msgstr ""
+
 msgid "Project '%{project_name}' is in the process of being deleted."
 msgstr ""
 
@@ -7419,6 +7452,9 @@ msgid "ProjectSettings|Users can only push commits to this repository that were 
 msgstr ""
 
 msgid "Projects"
+msgstr ""
+
+msgid "Projects Successfully Retrieved"
 msgstr ""
 
 msgid "Projects shared with %{group_name}"
@@ -9398,6 +9434,9 @@ msgstr ""
 msgid "There was an error loading users activity calendar."
 msgstr ""
 
+msgid "There was an error saving your changes."
+msgstr ""
+
 msgid "There was an error saving your notification settings."
 msgstr ""
 
@@ -9829,6 +9868,9 @@ msgid "To define internal users, first enable new users set to external"
 msgstr ""
 
 msgid "To enable it and see User Cohorts, visit %{application_settings_link_start}application settings%{application_settings_link_end}."
+msgstr ""
+
+msgid "To enable project selection, enter a valid Auth Token"
 msgstr ""
 
 msgid "To get started you enter your FogBugz URL and login information below. In the next steps, you'll be able to map users and select the projects you want to import."
@@ -10866,6 +10908,9 @@ msgstr ""
 msgid "Your changes have been saved"
 msgstr ""
 
+msgid "Your changes have been saved."
+msgstr ""
+
 msgid "Your comment will not be visible to the public."
 msgstr ""
 
@@ -11219,7 +11264,7 @@ msgstr ""
 msgid "here"
 msgstr ""
 
-msgid "http://<sentry-host>/api/0/projects/{organization_slug}/{project_slug}/"
+msgid "https://mysentryserver.com"
 msgstr ""
 
 msgid "https://your-bitbucket-server"
