Security Group Vuln Graph Date Ranges
First pass at filtering vuln history table history

* Added button markup
* Added actions, mutators, and store properties
* Added filter method

Push current iteration of the code to allow for UX feedback

More Vuln Chart Graph changes

* Only show dots on last 30 days graph
* Fix placement of day range button group
* Show active button for day range

Additional UX tweaks for sexure graph

* Show vertical lines in grid only for 60 and 90 days
* Set min date to 30, 60, 90 days ago
* Show dots for all date ranges

Clean up code for MR add unit tests

* Remove stray debuggers
* Remove use of dummy data
* Add unit tests for mutators and actions

Refactor vuln chart buttons into view

* Refactor vuln graph days ago buttons into seperate view

Update vuln graph button titles

Add unit tests for secure graph buttons

Run Prettier

Fix linting errors

Remove host file

* Remove accidentally committed host file

Update pot file

Run prettier

Add new line to vuln chart stylesheet

Refactor filtered vulns function

* Refactor into getter
* Add getter unit tests

Add change log entry

Fix linter errors in getters_spec

Run prettier and fix linter errors

First set of code review changes

Fix vuln chart getter specs

Update vuln chart button specs

* Update specs to make use of shallowRender from vue test utils

Update security vuln chart buttons to use I18n

Add Days contants for days vuln chart

* Swap out references to integers for constants

Run prettier

Update POT file

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -268,6 +268,11 @@ msgid_plural "%{count} %{type} modifications"
 msgstr[0] ""
 msgstr[1] ""
 
+msgid "1 Day"
+msgid_plural "%d Days"
+msgstr[0] ""
+msgstr[1] ""
+
 msgid "1 closed issue"
 msgid_plural "%d closed issues"
 msgstr[0] ""
@@ -8534,6 +8539,15 @@ msgid "Security Reports|No Vulnerabilities"
 msgstr ""
 
 msgid "Security Reports|Security dashboard documentation"
+msgstr ""
+
+msgid "Security Reports|Show Last 30 Days"
+msgstr ""
+
+msgid "Security Reports|Show Last 60 Days"
+msgstr ""
+
+msgid "Security Reports|Show Last 90 Days"
 msgstr ""
 
 msgid "Security Reports|There was an error creating the issue."
