--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -653,9 +653,6 @@ msgstr ""
 msgid "Advanced settings"
 msgstr ""
 
-msgid "After adding your Auth Token, use the 'Connect' button to load projects"
-msgstr ""
-
 msgid "Alert"
 msgid_plural "Alerts"
 msgstr[0] ""
@@ -1091,9 +1088,6 @@ msgid "Aug"
 msgstr ""
 
 msgid "August"
-msgstr ""
-
-msgid "Auth Token"
 msgstr ""
 
 msgid "Authentication Log"
@@ -1897,9 +1891,6 @@ msgstr ""
 msgid "Clear search input"
 msgstr ""
 
-msgid "Click 'Connect' to re-establish the connection to Sentry and activate the dropdown."
-msgstr ""
-
 msgid "Click any <strong>project name</strong> in the project list below to navigate to the project milestone."
 msgstr ""
 
@@ -2596,9 +2587,6 @@ msgid "Connect your external repositories, and CI/CD pipelines will run for new 
 msgstr ""
 
 msgid "Connecting..."
-msgstr ""
-
-msgid "Connection has failed. Re-check Auth Token and try again."
 msgstr ""
 
 msgid "Contact sales to upgrade"
@@ -3719,22 +3707,28 @@ msgstr ""
 msgid "ErrorTracking|Active"
 msgstr ""
 
+msgid "ErrorTracking|After adding your Auth Token, use the 'Connect' button to load projects"
+msgstr ""
+
 msgid "ErrorTracking|Auth Token"
 msgstr ""
 
-msgid "ErrorTracking|Connect"
+msgid "ErrorTracking|Click 'Connect' to re-establish the connection to Sentry and activate the dropdown."
+msgstr ""
+
+msgid "ErrorTracking|Connection has failed. Re-check Auth Token and try again."
+msgstr ""
+
+msgid "ErrorTracking|Find your hostname in your Sentry account settings page"
 msgstr ""
 
 msgid "ErrorTracking|No projects available"
 msgstr ""
 
-msgid "ErrorTracking|Project"
-msgstr ""
-
 msgid "ErrorTracking|Select project"
 msgstr ""
 
-msgid "ErrorTracking|Sentry API URL"
+msgid "ErrorTracking|To enable project selection, enter a valid Auth Token"
 msgstr ""
 
 msgid "Errors"
@@ -4107,9 +4101,6 @@ msgid "Find the downloaded ZIP file and decompress it."
 msgstr ""
 
 msgid "Find the newly extracted <code>Takeout/Google Code Project Hosting/GoogleCodeProjectHosting.json</code> file."
-msgstr ""
-
-msgid "Find your hostname in your Sentry account settings page"
 msgstr ""
 
 msgid "Fingerprints"
@@ -6379,9 +6370,6 @@ msgid "No preview for this file type"
 msgstr ""
 
 msgid "No prioritised labels with such name or description"
-msgstr ""
-
-msgid "No projects available"
 msgstr ""
 
 msgid "No public groups"
@@ -9870,9 +9858,6 @@ msgstr ""
 msgid "To enable it and see User Cohorts, visit %{application_settings_link_start}application settings%{application_settings_link_end}."
 msgstr ""
 
-msgid "To enable project selection, enter a valid Auth Token"
-msgstr ""
-
 msgid "To get started you enter your FogBugz URL and login information below. In the next steps, you'll be able to map users and select the projects you want to import."
 msgstr ""
 
@@ -11262,9 +11247,6 @@ msgid "help"
 msgstr ""
 
 msgid "here"
-msgstr ""
-
-msgid "https://mysentryserver.com"
 msgstr ""
 
 msgid "https://your-bitbucket-server"
