Fixing timeago test and updating i18n
Had to move the js-class used for testing.

Also regenerated gitlab.pot

Also fixed a v-else error I missed on last commit.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9897,6 +9897,9 @@ msgstr ""
 msgid "Trigger variables:"
 msgstr ""
 
+msgid "Triggerer"
+msgstr ""
+
 msgid "Triggers can force a specific branch or tag to get rebuilt with an API call.  These tokens will impersonate their associated user including their access to projects and their project permissions."
 msgstr ""
 
