--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -8524,6 +8524,9 @@ msgstr ""
 msgid "Security Reports|Dismiss vulnerability"
 msgstr ""
 
+msgid "Security Reports|Either you don't have permission to view this dashboard or the dashboard has not been setup. Please check your permission settings with your administrator or check your dashboard configurations to proceed."
+msgstr ""
+
 msgid "Security Reports|Learn more about setting up your dashboard"
 msgstr ""
 
@@ -8531,6 +8534,12 @@ msgid "Security Reports|More info"
 msgstr ""
 
 msgid "Security Reports|No Vulnerabilities"
+msgstr ""
+
+msgid "Security Reports|Oops, something doesn't seem right."
+msgstr ""
+
+msgid "Security Reports|Security Dashboard Unavailable"
 msgstr ""
 
 msgid "Security Reports|Security dashboard documentation"
