Move Operations Dashboard search bar into modal
This commit moves the existing search bar on the Operations Dashboard
page - which is currently embedded directly in the page - into a modal
dialog.

The new search feature uses the new "project_selector" CE shared
component to allow the user to select one or more projects to add.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -41,9 +41,6 @@ msgstr ""
 msgid " or <#issue id>"
 msgstr ""
 
-msgid "\"%{query}\" in projects"
-msgstr ""
-
 msgid "%d commit"
 msgid_plural "%d commits"
 msgstr[0] ""
@@ -8940,6 +8937,9 @@ msgstr ""
 msgid "Something went wrong, unable to remove project"
 msgstr ""
 
+msgid "Something went wrong, unable to search projects"
+msgstr ""
+
 msgid "Something went wrong. Please try again."
 msgstr ""
 
@@ -10610,9 +10610,6 @@ msgid "View deployment"
 msgstr ""
 
 msgid "View details: %{details_url}"
-msgstr ""
-
-msgid "View documentation"
 msgstr ""
 
 msgid "View eligible approvers"
