--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -655,6 +655,9 @@ msgstr ""
 msgid "AdminUsers|Without projects"
 msgstr ""
 
+msgid "Advanced"
+msgstr ""
+
 msgid "Advanced permissions, Large File Storage and Two-Factor authentication settings."
 msgstr ""
 
@@ -1829,6 +1832,9 @@ msgstr ""
 msgid "Choose the top-level group for your repository imports."
 msgstr ""
 
+msgid "Choose visibility level, enable/disable project features (issues, repository, wiki, snippets) and set permissions."
+msgstr ""
+
 msgid "Choose what content you want to see on a group’s overview page"
 msgstr ""
 
@@ -1839,6 +1845,9 @@ msgid "Choose which repositories you want to connect and run CI/CD pipelines."
 msgstr ""
 
 msgid "Choose which shards you wish to synchronize to this secondary node."
+msgstr ""
+
+msgid "Choose your merge method, set up a default merge request description template."
 msgstr ""
 
 msgid "CiStatusLabel|canceled"
@@ -3016,7 +3025,7 @@ msgstr ""
 msgid "Customize language and region related settings."
 msgstr ""
 
-msgid "Customize your merge request approval settings."
+msgid "Customize your issue restrictions."
 msgstr ""
 
 msgid "Customize your pipeline configuration, view your pipeline status and coverage report."
@@ -4364,6 +4373,9 @@ msgstr ""
 msgid "General"
 msgstr ""
 
+msgid "General Settings"
+msgstr ""
+
 msgid "General pipelines"
 msgstr ""
 
@@ -5065,6 +5077,9 @@ msgstr ""
 msgid "Housekeeping successfully started"
 msgstr ""
 
+msgid "Housekeeping, export, path, transfer, remove, archive."
+msgstr ""
+
 msgid "However, you are already a member of this %{member_source}. Sign in using a different account to accept the invitation."
 msgstr ""
 
@@ -5385,6 +5400,9 @@ msgstr ""
 msgid "Issue events"
 msgstr ""
 
+msgid "Issue settings"
+msgstr ""
+
 msgid "IssueBoards|Board"
 msgstr ""
 
@@ -5673,6 +5691,9 @@ msgid "Learn more about Kubernetes"
 msgstr ""
 
 msgid "Learn more about Web Terminal"
+msgstr ""
+
+msgid "Learn more about approvals."
 msgstr ""
 
 msgid "Learn more about custom project templates"
@@ -6353,6 +6374,9 @@ msgid "Name your individual key via a title"
 msgstr ""
 
 msgid "Name:"
+msgstr ""
+
+msgid "Naming, tags, avatar"
 msgstr ""
 
 msgid "Naming, visibility"
@@ -8701,6 +8725,9 @@ msgstr ""
 msgid "Session expiration, projects limit and attachment size."
 msgstr ""
 
+msgid "Set a number of approvals required, the approvers and other approval settings."
+msgstr ""
+
 msgid "Set a password on your account to pull or push via %{protocol}."
 msgstr ""
 
@@ -10435,6 +10462,9 @@ msgstr ""
 msgid "Update your group name, description, avatar, and visibility."
 msgstr ""
 
+msgid "Update your project name, tags, description and avatar."
+msgstr ""
+
 msgid "Updating"
 msgstr ""
 
@@ -10712,6 +10742,9 @@ msgid "Visibility level"
 msgstr ""
 
 msgid "Visibility level:"
+msgstr ""
+
+msgid "Visibility, project features, permissions"
 msgstr ""
 
 msgid "Visibility:"
